# BrainHack

./: README.md
IcingOnCake/: README.md
IcingOnCake/DataOrchestrator/: CMakeLists.txt  main.cpp
IcingOnCake/OSCMangler/: CMakeLists.txt  main.cpp
IcingOnCake/sketchbook/budapest/: EEG_Processing.pde  OpenBCI_ADS1299.pde  budapest.pde  dataFiles.pde  dataTypes.pde
ImPaint-CodeIsLife/: .gitignore
LevelPlus/: README.md
LevelPlus/app/: build.gradle
LevelPlus/gradle/wrapper/: gradle-wrapper.properties
PushApp/: ApplesAndOranges.CSharp.csproj  ApplesAndOranges.sln  ApplesAndOranges.userprefs
PushApp/Assets/: Handler.cs  Player.cs  build.unity
PushApp/Assets/Materials/: Brain-Aerobics.mat  apple.mat  blue.mat  grass.mat  orange.mat  red.mat  stone.mat
PushApp/ProjectSettings/: ProjectSettings.asset
PushApp/Temp/__Backupscenes/: 0.backup
TeamNikThink/: BCI2016.sln
TeamNikThink/DataFiles/: dump35550 AM.txt  dump35705 AM.txt  dump35959 AM.txt
TeamNikThink/NIKBCI.Common/: INBDevice.cs  NBAction.cs  NBDataItem.cs  NBDataReader.cs  NBResult.cs  NIKBCI.Common.csproj
TeamNikThink/NIKBCI.ConsoleRecorder/: NIKBCI.ConsoleRecorder.csproj  Program.cs
TeamNikThink/NIKBCI.Keyboard/: KeyboardHandler.cs  NBKeyboard.cs  NIKBCI.Keyboard.csproj
TeamNikThink/NIKBCI.WpfTester/: App.xaml  App.xaml.cs  ChartVM.cs  MainWindow.xaml  MainWindow.xaml.cs  NIKBCI.WpfTester.csproj  packages.config
TeamNikThink/NeuroPype/: SimpleMotorImagery2_kg.ows  bugfix_proba.xdf  kg_fixed.xdf  motorimag_calibrate.py  repair-muse-data.ows  zsolt_fixed.xdf  zsolt_muse.xdf  zsoltagain.xdf
(+51 files in other folders)
